<resources>
    <string name="app_name">MeMinder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo" />
    <string name="get_started">Get started</string>
    <string name="user_name_label">Username</string>
    <string name="login_image" />
    <string name="user_name" />
    <string name="password_label">Password</string>
    <string name="password" />
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="account" />
    <string name="first_name_label">First Name</string>
    <string name="first_name" />
    <string name="lastName_label">Last Name</string>
    <string name="last_name" />
    <string name="email_label">Email</string>
    <string name="email" />
    <string name="passwords" />
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm" />
    <string name="create_account2">Create Account</string>
    <string name="back">Back</string>
    <string name="View_To_do">To Do List</string>
    <string name="View_calendar">Calendar</string>
    <string name="View_completed">Completed List</string>
    <string name="Add">Add</string>
    <string name="back_home">Back Home</string>
    <string name="assignment_number">Assignment #</string>
    <string name="course_Name">Course Name</string>
    <string name="course_Code">Course Code</string>
    <string name="due">Due on</string>

    <string-array name="completed">
        <item>Completed</item>
        <item>Not Completed</item>
    </string-array>
</resources>
