<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.harneet.meminder.Create_Account"
    android:id="@+id/relativeLayout2">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/background_create_account" />

    <!-- First name -->
    <TextView
        android:id="@+id/firstNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:padding="10dp"
        android:text="@string/first_name_label"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/firstNameEditText"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="text"
        android:text="@string/first_name"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <requestFocus />
    </EditText>

    <!-- Last Name  -->
    <TextView
        android:id="@+id/lastNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:padding="10dp"
        android:text="@string/lastName_label"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameLabel" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="8"
        android:inputType="text"
        android:text="@string/last_name"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEditText">

        <requestFocus />
    </EditText>

    <!-- Email Address -->
    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lastNameLabel"
        android:layout_alignStart="@+id/lastNameLabel"
        android:layout_below="@+id/lastNameLabel"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:text="@string/email_label"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameLabel" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/emailLabel"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/emailLabel"
        android:layout_toRightOf="@+id/emailLabel"
        android:ems="8"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastNameEditText">

        <requestFocus />
    </EditText>

    <!-- Password -->
    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailLabel"
        android:layout_alignStart="@+id/emailLabel"
        android:layout_below="@+id/emailLabel"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:padding="10dp"
        android:text="@string/password_label"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLabel" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/passwordLabel"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/passwordLabel"
        android:layout_toRightOf="@+id/passwordLabel"
        android:ems="8"
        android:inputType="textPassword"
        android:text="@string/passwords"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/passwordLabel2"
        android:layout_width="135dp"
        android:layout_height="71dp"
        android:layout_alignLeft="@+id/passwordLabel"
        android:layout_alignStart="@+id/passwordLabel"
        android:layout_below="@+id/passwordLabel"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:padding="10dp"
        android:text="@string/confirm_password"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel" />

    <EditText
        android:id="@+id/passwordEditText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/passwordLabel2"
        android:layout_marginTop="48dp"
        android:layout_toEndOf="@+id/passwordLabel2"
        android:layout_toRightOf="@+id/passwordLabel2"
        android:ems="8"
        android:inputType="textPassword"
        android:text="@string/confirm"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText">

        <requestFocus />
    </EditText>

    <!-- Button for creating a new account -->
    <Button
        android:id="@+id/register"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_below="@+id/passwordEditText2"
        android:layout_centerInParent="true"
        android:text="@string/create_account2"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="336dp" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_alignLeft="@+id/register"
        android:layout_alignStart="@+id/register"
        android:layout_below="@+id/register"
        android:text="@string/back"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="414dp" />
</android.support.constraint.ConstraintLayout>
