<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.harneet.meminder.Login"
    android:id="@+id/relativeLayout">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="526dp"
        android:contentDescription="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_login1" />

    <!-- User Name -->
    <TextView
        android:id="@+id/userNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:padding="10dp"
        android:text="@string/user_name_label"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/userNameEditLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:ems="8"
        android:inputType="text"
        android:text="@string/user_name"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/userNameLabel"
        app:layout_constraintBaseline_toBaselineOf="@+id/userNameLabel"
        app:layout_constraintStart_toEndOf="@+id/userNameLabel">
        <requestFocus />

    </EditText>

    <!-- Password -->
    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/password_label"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/userNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/userNameLabel"
        app:layout_constraintLeft_toLeftOf="@+id/userNameLabel" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:ems="8"
        android:inputType="textPassword"
        android:text="@string/password"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/passwordLabel"
        app:layout_constraintBaseline_toBaselineOf="@+id/passwordLabel"
        app:layout_constraintStart_toEndOf="@+id/passwordLabel">
        <requestFocus />
    </EditText>

    <!-- Login in Button if account already exists -->
    <Button
        android:id="@+id/logInButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <!-- Button for creating a new account -->
    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginBottom="136dp"
        android:text="@string/create_account"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
