<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home"
    tools:context="com.example.harneet.meminder.Home">

    <Button
        android:id="@+id/button_to_do"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:foregroundGravity="fill"
        android:gravity="center"
        android:text="@string/View_To_do"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_complete"
        app:layout_constraintEnd_toStartOf="@+id/button_complete"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:foregroundGravity="fill"
        android:gravity="center"
        android:text="@string/View_calendar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_calendar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <Button
        android:id="@+id/button_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:foregroundGravity="fill"
        android:text="@string/View_completed"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_complete"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>
